// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cjk.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落][]

=====================================output=====================================
[這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落][]

================================================================================
`;

exports[`cjk.md - {"proseWrap":"never"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "never"
                                                                                | printWidth
=====================================input======================================
[這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落][]

=====================================output=====================================
[這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落][]

================================================================================
`;

exports[`collapsed.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[hello][]

=====================================output=====================================
[hello][]

================================================================================
`;

exports[`collapsed.md - {"proseWrap":"never"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "never"
                                                                                | printWidth
=====================================input======================================
[hello][]

=====================================output=====================================
[hello][]

================================================================================
`;

exports[`definition.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[just-url]: https://example.com
[url-with-short-title]: https://example.com "title"
[url-with-long-title]: https://example.com "a long, long title. It's really really long. Here have words."
[empty-title]: https://example.com "" 

[long]: https://example.com/a-long-url/another-segment/yet-another-segment/a-really-long-file-name.php.aspx 
[long-with-title]: https://example.com/a-long-url/another-segment/yet-another-segment/a-really-long-file-name.php.aspx "look a title!"
[long-with-empty-title]: https://example.com/a-long-url/another-segment/yet-another-segment/a-really-long-file-name.php.aspx ""

=====================================output=====================================
[just-url]: https://example.com
[url-with-short-title]: https://example.com "title"
[url-with-long-title]:
  https://example.com
  "a long, long title. It's really really long. Here have words."
[empty-title]: https://example.com
[long]:
  https://example.com/a-long-url/another-segment/yet-another-segment/a-really-long-file-name.php.aspx
[long-with-title]:
  https://example.com/a-long-url/another-segment/yet-another-segment/a-really-long-file-name.php.aspx
  "look a title!"
[long-with-empty-title]:
  https://example.com/a-long-url/another-segment/yet-another-segment/a-really-long-file-name.php.aspx

================================================================================
`;

exports[`definition.md - {"proseWrap":"never"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "never"
                                                                                | printWidth
=====================================input======================================
[just-url]: https://example.com
[url-with-short-title]: https://example.com "title"
[url-with-long-title]: https://example.com "a long, long title. It's really really long. Here have words."
[empty-title]: https://example.com "" 

[long]: https://example.com/a-long-url/another-segment/yet-another-segment/a-really-long-file-name.php.aspx 
[long-with-title]: https://example.com/a-long-url/another-segment/yet-another-segment/a-really-long-file-name.php.aspx "look a title!"
[long-with-empty-title]: https://example.com/a-long-url/another-segment/yet-another-segment/a-really-long-file-name.php.aspx ""

=====================================output=====================================
[just-url]: https://example.com
[url-with-short-title]: https://example.com "title"
[url-with-long-title]: https://example.com "a long, long title. It's really really long. Here have words."
[empty-title]: https://example.com
[long]: https://example.com/a-long-url/another-segment/yet-another-segment/a-really-long-file-name.php.aspx
[long-with-title]: https://example.com/a-long-url/another-segment/yet-another-segment/a-really-long-file-name.php.aspx "look a title!"
[long-with-empty-title]: https://example.com/a-long-url/another-segment/yet-another-segment/a-really-long-file-name.php.aspx

================================================================================
`;

exports[`full.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[hello][world]

=====================================output=====================================
[hello][world]

================================================================================
`;

exports[`full.md - {"proseWrap":"never"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "never"
                                                                                | printWidth
=====================================input======================================
[hello][world]

=====================================output=====================================
[hello][world]

================================================================================
`;

exports[`shortcut.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[hello]

=====================================output=====================================
[hello]

================================================================================
`;

exports[`shortcut.md - {"proseWrap":"never"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "never"
                                                                                | printWidth
=====================================input======================================
[hello]

=====================================output=====================================
[hello]

================================================================================
`;

exports[`title.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[ref]: https://example.com (bar)
[other-ref]: https://example.com (Shakespeare's "Romeo and Juliet" is a famous play)

[a]: https://example.com "\\""
[a]: https://example.com '\\"'
[a]: https://example.com (\\")

[a]: https://example.com "\\'"
[a]: https://example.com '\\''
[a]: https://example.com (\\')

[a]: https://example.com "\\'"
[a]: https://example.com '\\)'
[a]: https://example.com (\\))

[a]: https://example.com "\\\\\\""
[a]: https://example.com '\\\\\\''
[a] https://example.com (\\\\\\))

[a]: https://example.com "\\\\'"
[a]: https://example.com '\\\\"'
[a]: https://example.com (\\\\")


=====================================output=====================================
[ref]: https://example.com "bar"
[other-ref]:
  https://example.com
  (Shakespeare's "Romeo and Juliet" is a famous play)

[a]: https://example.com "\\"" [a]: https://example.com '\\"' [a]:
https://example.com (\\")

[a]: https://example.com "'"

[a]: https://example.com '\\'' [a]: https://example.com (\\')

[a]: https://example.com "'"
[a]: https://example.com ")"

[a]: https://example.com (\\))

[a]: https://example.com "\\\\\\"" [a]: https://example.com '\\\\\\'' [a]
https://example.com (\\\\\\))

[a]: https://example.com "'"
[a]: https://example.com '"'
[a]: https://example.com '"'

================================================================================
`;

exports[`title.md - {"proseWrap":"never"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "never"
                                                                                | printWidth
=====================================input======================================
[ref]: https://example.com (bar)
[other-ref]: https://example.com (Shakespeare's "Romeo and Juliet" is a famous play)

[a]: https://example.com "\\""
[a]: https://example.com '\\"'
[a]: https://example.com (\\")

[a]: https://example.com "\\'"
[a]: https://example.com '\\''
[a]: https://example.com (\\')

[a]: https://example.com "\\'"
[a]: https://example.com '\\)'
[a]: https://example.com (\\))

[a]: https://example.com "\\\\\\""
[a]: https://example.com '\\\\\\''
[a] https://example.com (\\\\\\))

[a]: https://example.com "\\\\'"
[a]: https://example.com '\\\\"'
[a]: https://example.com (\\\\")


=====================================output=====================================
[ref]: https://example.com "bar"
[other-ref]: https://example.com (Shakespeare's "Romeo and Juliet" is a famous play)

[a]: https://example.com "\\"" [a]: https://example.com '\\"' [a]: https://example.com (\\")

[a]: https://example.com "'"

[a]: https://example.com '\\'' [a]: https://example.com (\\')

[a]: https://example.com "'"
[a]: https://example.com ")"

[a]: https://example.com (\\))

[a]: https://example.com "\\\\\\"" [a]: https://example.com '\\\\\\'' [a] https://example.com (\\\\\\))

[a]: https://example.com "'"
[a]: https://example.com '"'
[a]: https://example.com '"'

================================================================================
`;
